rc/html/omp.xsl (result-header): Style update. Fix width for table columns and align actions to the left.
git-svn-id: svn+ssh://scm.wald.intevation.org/openvas/trunk/gsa@16180 423fd1db-d629-0410-8442-d21db03e70f4

--- a/src/html/gsa-style.css
+++ b/src/html/gsa-style.css
@@ -139,6 +139,10 @@ div.float_right {
   float: right;
 }
 
+div.float_left {
+  float: left;
+}
+
 div.diff-line {
  white-space: pre;
  font-family: monospace;
